fix overflowing card content

--- a/src/js/templates/styles/templates.scss
+++ b/src/js/templates/styles/templates.scss
@@ -14,16 +14,14 @@
 }
 
 .mi-card-item {
+  height: 92px;
+  overflow: hidden;
   header {
     font-size: 16px;
     margin-bottom: 5px;
-    max-height: 44px;
-    overflow: hidden;
   }
 
   p {
     line-height: 22px;
-    max-height: 45px;
-    overflow: hidden;
   }
 }
